# service/src/main/kotlin/rs/russian/portal/user/UserController.kt
@@ -3,8 +3,8 @@ package rs.russian.portal.user
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
 import rs.russian.generated.api.UserApi
+import rs.russian.generated.model.AccountDto
 import rs.russian.generated.model.UserInfoDto
-import rs.russian.generated.model.UserProfileDto
 import rs.russian.portal.shared.security.currentUserId
 
 @RestController
@@ -14,12 +14,12 @@ class UserController(
     private val userProfileMapper: UserProfileMapper
 ) : UserApi {
 
-    override fun getProfile(): ResponseEntity<UserProfileDto> {
+    override fun getCurrentProfile(): ResponseEntity<AccountDto> {
         val user = userService.getUser(currentUserId())
         return ResponseEntity.ok(userProfileMapper.map(user))
     }
 
-    override fun getInfo(): ResponseEntity<UserInfoDto> {
+    override fun getInfo(login: String): ResponseEntity<UserInfoDto> {
         TODO("Not yet implemented")
     }
 
